[gd_scene load_steps=40 format=3 uid="uid://bbec2wl3yhr11"]

[ext_resource type="Script" path="res://Assets/Scripts/feioso.gd" id="1_2r0l4"]
[ext_resource type="Texture2D" uid="uid://8poquvidr17f" path="res://Assets/Sprites/Enemies/Feioso/Dash/Feioso_DashRight.png" id="1_up68f"]
[ext_resource type="Shader" path="res://Assets/Shaders/hit_flash.gdshader" id="2_0t1kx"]
[ext_resource type="Texture2D" uid="uid://eu7nul5mlmkq" path="res://Assets/Sprites/Enemies/Feioso/Walk/Feioso_WalkRight.png" id="3_6nbwi"]
[ext_resource type="Texture2D" uid="uid://ll5qeny8qpln" path="res://Assets/Sprites/Enemies/Feioso/Death/Feioso_Death.png" id="3_k07fa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jaegd"]
resource_local_to_scene = true
shader = ExtResource("2_0t1kx")
shader_parameter/hit_opacity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mcr40"]
atlas = ExtResource("1_up68f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2ate"]
atlas = ExtResource("1_up68f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7fh7"]
atlas = ExtResource("1_up68f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry718"]
atlas = ExtResource("1_up68f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_803ak"]
atlas = ExtResource("1_up68f")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml6ab"]
atlas = ExtResource("1_up68f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5afs8"]
atlas = ExtResource("1_up68f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_svsjt"]
atlas = ExtResource("1_up68f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmwjy"]
atlas = ExtResource("1_up68f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxrjl"]
atlas = ExtResource("1_up68f")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4rq6"]
atlas = ExtResource("3_k07fa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbfdy"]
atlas = ExtResource("3_k07fa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bd8x"]
atlas = ExtResource("3_k07fa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpuue"]
atlas = ExtResource("3_k07fa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_evngi"]
atlas = ExtResource("3_k07fa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3mtj"]
atlas = ExtResource("3_k07fa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aamis"]
atlas = ExtResource("3_6nbwi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kregc"]
atlas = ExtResource("3_6nbwi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_es200"]
atlas = ExtResource("3_k07fa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5per7"]
atlas = ExtResource("3_k07fa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxmsf"]
atlas = ExtResource("3_6nbwi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34vae"]
atlas = ExtResource("3_6nbwi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnd5e"]
atlas = ExtResource("3_6nbwi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksr3i"]
atlas = ExtResource("3_6nbwi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x08o"]
atlas = ExtResource("3_6nbwi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pajv5"]
atlas = ExtResource("3_6nbwi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h16hn"]
atlas = ExtResource("3_6nbwi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujqn4"]
atlas = ExtResource("3_6nbwi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nf7vg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcr40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2ate")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7fh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry718")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_803ak")
}],
"loop": true,
"name": &"DashLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml6ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5afs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svsjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmwjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxrjl")
}],
"loop": true,
"name": &"DashRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4rq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbfdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bd8x")
}],
"loop": false,
"name": &"DeathLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpuue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evngi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3mtj")
}],
"loop": false,
"name": &"DeathRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aamis")
}],
"loop": true,
"name": &"IdleLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kregc")
}],
"loop": true,
"name": &"IdleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es200")
}],
"loop": true,
"name": &"StunLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5per7")
}],
"loop": true,
"name": &"StunRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxmsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34vae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnd5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksr3i")
}],
"loop": true,
"name": &"WalkLeft",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x08o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pajv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h16hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujqn4")
}],
"loop": true,
"name": &"WalkRight",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8jqb7"]
radius = 5.65

[sub_resource type="CircleShape2D" id="CircleShape2D_xc2un"]
radius = 5.65

[sub_resource type="Animation" id="Animation_x7h1q"]
resource_name = "Hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Feioso_Animate_Sprite:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5axdn"]
_data = {
"Hit": SubResource("Animation_x7h1q")
}

[node name="Feioso" type="CharacterBody2D" node_paths=PackedStringArray("ray_cast", "sprite_anime", "vfx_shader", "on_detection_timer", "is_dashing_timer", "is_knockback_timer")]
z_index = 1
collision_layer = 4
collision_mask = 118
script = ExtResource("1_2r0l4")
ray_cast = NodePath("Feioso_Raycast")
sprite_anime = NodePath("Feioso_Animate_Sprite")
vfx_shader = NodePath("Effects")
on_detection_timer = NodePath("on_detection")
is_dashing_timer = NodePath("is_dashing")
is_knockback_timer = NodePath("is_knockback")

[node name="Feioso_Animate_Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_jaegd")
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_nf7vg")
animation = &"DeathLeft"

[node name="Feioso_Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.9407e-08)
shape = SubResource("CircleShape2D_8jqb7")

[node name="Feioso_Raycast" type="RayCast2D" parent="."]
collide_with_areas = true
collide_with_bodies = false

[node name="on_detection" type="Timer" parent="."]

[node name="is_dashing" type="Timer" parent="."]
wait_time = 2.0

[node name="is_knockback" type="Timer" parent="."]
wait_time = 0.6

[node name="HitBox" type="Area2D" parent="." groups=["feioso"]]
collision_layer = 4
collision_mask = 104

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_xc2un")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5axdn")
}

[connection signal="animation_finished" from="Feioso_Animate_Sprite" to="." method="_on_animate_sprite_animation_finished"]
[connection signal="timeout" from="on_detection" to="." method="on_detection_timeout"]
[connection signal="timeout" from="is_dashing" to="." method="is_dashing_timeout"]
[connection signal="timeout" from="is_knockback" to="." method="_is_knockback_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
